--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -33,7 +33,7 @@ body {
 	font-size:13px; color: #111; font-weight:400;
   font-family: 'Frutiger LT Arabic 45';
 }
-p { font-family: 'Frutiger LT Arabic 45';}
+p { font-family: 'Frutiger LT Arabic 45'; margin:0; padding:0; }
 h1, h2, h3 { font-family: 'Frutiger LT Arabic 45'; font-weight: 300; }
 h1 { 
 	margin:0; padding:0;
@@ -66,9 +66,19 @@ h4 {
 	z-index:1; content:'';  vertical-align: top;
 	display: inline-block; width:3px; height:30px; background:#586b79; }
 
+
+.title_red {
+	margin: 0px 0 20px 0; padding: 0;
+	color: #c91032; font-weight: normal;
+	font-family: 'Frutiger LT Arabic 55 Roman';
+	font-size: 20px; line-height: 1.3em;
+	text-transform: uppercase; }
+
+
+
 p { 
 	font-size: 1rem;
-	line-height: 1.2rem; }
+	line-height: 1.4rem; }
 a { text-decoration: underline; color:#ce132d; }
 a.noline { text-decoration: none; }
 a:hover { color:#ce132d; } 
@@ -263,7 +273,7 @@ input[type="date"], input[type="datetime-local"], input[type="email"],
 textarea, select, option {
 	color:#6a6e89; font-size:1em;
 	background:#fff; border:2px solid #ccc;
-	border-radius: 4px; 
+	border-radius: 4px; font-family: 'Frutiger LT Arabic 55 Roman';
 	-webkit-border-radius: 4px; -moz-border-radius: 4px;
 }
 
@@ -271,9 +281,14 @@ input[type="text"], input[type="tel"], input[type="number"],input[type="password
 input[type="date"], input[type="datetime-local"], input[type="email"] { 
 	width:100%; height:48px; padding:10px; margin:0 0 15px; border-radius:6px;
 }
-input[type="date"] {
-	
+input[type="date"]::-webkit-inner-spin-button,
+input[type="datetime-local"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator,
+input[type="datetime-local"]::-webkit-calendar-picker-indicator {
+    display: none;
+    -webkit-appearance: none;
 }
+
 input[type="date"], input[type="datetime-local"] {
 	padding-left:25px;
 	background:url('../images/form-calendar.svg') 8px 16px no-repeat;
