--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1177,7 +1177,7 @@ ul.dropdownlogin li a {
 .option_block select {
 	border:1px solid #ccc; outline:none; background:#eee;
 	border-radius: 2px; max-width:200px;
-	width:100%; height:35px; margin:0; padding:4px;
+	width:100%; height:25px; margin:0; padding:4px;
 }
 
 
@@ -1305,7 +1305,7 @@ border-radius: 3px;
 	width:100%; float:left; margin:0 0 20px; padding:0; }
 .contact_info-block h6 { 
 	margin:0; padding:0; line-height:1.2em;
-	font-size:20px; font-weight:normal; color:#585858; }
+	font-size:20px; font-weight:normal; color:#585858; }
 .contact_info-block p { 
 	font-size:13px; margin:0; padding:0; }
 .contact_info-block p a { color:#585858; text-decoration: none; }
@@ -1538,15 +1538,18 @@ ul.tabs li.active {
 	width:100%; float:left; text-align: center;
   margin:30px 0 0 0;}
 .profile_image {
-	width:130px; max-width:100%;
+	width:140px; max-width:100%;
 	position:relative; padding:0; margin:0 auto;
 	border-radius:100%; text-align:center;
 	display: inline-block; 
 }
 .profile_image img.profile_image {
-	object-fit: cover; width:130px; max-height:130px; max-width:100%;
-	overflow: hidden; border-radius:120px; float:left; 
-	margin:0 0 15px; padding:5px; border:2px solid #d1102b;
+	object-fit: cover; width:120px; max-height:120px; max-width:100%;
+	overflow: hidden; border-radius:120px; float:none; 
+	margin:0 0 15px; padding:0px; border:4px solid #fff;
+	-webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.2);
+-moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.2);
+box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.2);
 }
 .profile_image a { 
 	background:red; width:35px; height: 35px; z-index: 1001;
@@ -1559,8 +1562,14 @@ ul.tabs li.active {
 .profile_image h6 {
 	width:100%; float:left; margin:0; padding:0;
 	font-weight:400; line-height:1.2em;
-	text-transform: uppercase; font-size:14px; text-align: left;
+	text-transform: uppercase; font-size:14px; text-align: center;
 }
+.profile_image-block a.logout { 
+	font-weight:bold; font-size:14px; display: inline-block;
+	background:#fff; text-decoration: none; line-height: 1.2em; 
+	padding:5px 10px 8px; margin:10px 0 0; }
+
+
 
 .customer_notification_bar {
 	width:100%; margin:30px 0 20px; padding:5px 10px; background:#ffe1e1;
@@ -1576,7 +1585,7 @@ ul.tabs li.active {
 
 .customer_profile-form { width:100%; float:left; }
 .customer_profile-form h4 { color:#cf0e29; margin:0; padding:0; }
-.customer_profile-form  h6 { 
+.customer_profile-form h6 { 
 	color:#595959; margin:0 0 10px; padding:0;
 	text-align: left;  font-weight:600; text-transform: Capitalize; font-size:16px; }
 
@@ -1623,10 +1632,9 @@ border-radius: 3px;
 }
 
 
-
-
-
-.openpasswordfield { text-decoration:underline; }
+.openpasswordfield { 
+	font-family: 'Frutiger LT Arabic 55 Roman'; font-weight:normal;
+	text-decoration:underline; color:#ce132e; text-decoration:none;  }
 .open_passwordchanger { 
 	margin-top:0px; margin-bottom:20px;
 	display:none; transition: all 1s; }
@@ -1641,8 +1649,6 @@ border-radius: 3px;
 
 
 /* inquiry --------------- */
-
-
 .customer_profile-inquiry_form {
 	width:100%; float:left; background:#fff;
 	clear:both;margin:50px 0 50px; padding:0; 
@@ -1873,8 +1879,15 @@ border-radius: 3px;
 
 
 
+/* customer no contracts ----------------------- */
+.nocontracts_blocks { 
+	width:100%; float:left; clear: both; padding:150px 0 100px; margin:0; text-align: center; } 
+.nocontracts_blocks .title_red { text-transform: none !important; }
+.nocontracts_blocks img { width:200px; max-width:100%; float:none; display: inline-block; }
 
-
+@media(max-width:575px){
+	.nocontracts_blocks { padding:50px 0 30px;}
+}
 
 
 
@@ -2056,9 +2069,6 @@ border-radius: 3px;
 }
 
 
-
-
-
 .booking_modify_reserve {
 	width: 96%; float: left;
 	padding: 20px; margin: 20px 2%;
@@ -2108,7 +2118,6 @@ border-radius: 3px;
 	.Lookup_reservation input[type="submit"]{ float:left;  margin-top:10px; }
 }
 
-
 ul.circle_listing { margin:20px 0 20px 20px; padding:0; list-style: none; }
 ul.circle_listing li {
 	position:relative;
@@ -2119,6 +2128,192 @@ ul.circle_listing li::before {
 	background:#ce132d; content: ''; border-radius: 10px; }
 ul.circle_listing li a {}
 
+
+
+
+/* --------------------------------- */
+/* new profile pages --------------- */
+.profile_nav {
+	width: 100%; height: 100%; float: left; 
+  padding: 20px; margin: 0;
+	background: #f1f1f1;
+}
+.profile_nav .profile_image a { 
+	top: 20px; left: -0px; right: auto; }
+
+
+
+.customer_profile_menu { width:100%; float:left; margin:10px 0; padding:20px 0; }
+.customer_profile_menu ul { margin:0; padding:0; list-style: none; width:100%; }
+.customer_profile_menu ul li { 
+	line-height: 1em; 
+	float: left; width:100%; margin:0 0 10px; padding:0; position: relative; }
+.customer_profile_menu ul li a { 
+	width:100%;
+	font-family: 'Frutiger LT Arabic 55 Roman';
+	padding:10px 10px 10px 50px; margin:0; font-size:14px; cursor: pointer;
+	text-decoration: none; color:#5d5b5c; display: inline-block; }
+
+.customer_profile_menu ul li a svg { 
+	width:16px; margin:6px 0 0; padding:0; }
+.customer_profile_menu ul li a svg path,
+.customer_profile_menu ul li a svg circle { fill:#fff; }
+.customer_profile_menu ul li a span:first-child { 
+	position: absolute; top:4px; left:10px;
+	background:#ce132e; width:30px; height:30px;
+  border-radius:30px; text-align:center; }
+
+.customer_profile_menu ul li a span { 
+	display: inline-block; float:left; line-height: 1.2em;}
+.customer_profile_menu ul li a:hover { color:#d50e2d; }
+.customer_profile_menu ul li a:hover svg path,
+.customer_profile_menu ul li a:hover svg circle { fill:#ce132e; }
+
+.customer_profile_menu ul li a.activem { color:#d50e2d; background:#ce132e; color:#fff; }
+.customer_profile_menu ul li a.activem span:first-child { background:#fff; }
+.customer_profile_menu ul li a.activem svg path,
+.customer_profile_menu ul li a.activem svg circle { fill:#ce132e; }
+
+.customer_profile_menu ul li a:hover { background:#ce132e; color:#fff; }
+.customer_profile_menu ul li a:hover span:first-child { background:#fff; }
+
+
+@media(max-width:575px){
+	.customer_profile-nav { margin:30px 0 0; height:auto; }
+	.customer_profile_menu { padding:0; margin:5px 0 5px 0; }
+	.customer_profile_menu ul { width:100%; text-align: center; }
+	.customer_profile_menu ul li { float:none; display: inline-block; width:auto; margin:0 15px; }
+}
+@media(max-width:420px){
+	.customer_profile_menu ul li { margin:0 10px; padding-right:2px; }	
+}
+
+
+.profileheading {
+	margin:20px 0; padding:10px;
+	width:100%; float:left; color:#fff;
+	background:#ce132e; }
+.profileheading span { 
+	margin:0; padding:10px; border-radius:40px;
+	display: inline-block; float:left; width:40px; height:40px; background:#fff; }
+.profileheading img { 
+	width:40px; }
+
+.profileheading span:last-child { 
+	width:auto; height: auto;
+	font-size:16px; font-family: 'Frutiger LT Arabic 55 Roman'; font-weight:normal;
+	background:none; margin:4px 10px 0; padding:0; }
+
+
+
+.profile_disable_form { margin-bottom:30px;}
+.profile_disable_form label { color:#ce132e; margin:0; padding:0; }
+.profile_disable_form input { max-height:40px; margin:0 0 10px; }
+.profile_disable_form input[type="date"] { max-height: 40px; padding:0 10px; }
+
+
+.editheader { 
+	width:100%; float:left; margin:0 0 30px; padding:0;
+	border-bottom:2px solid #d1d1d1; }
+.editheader span {
+	display: inline-block; float:left;
+	font-family: 'Frutiger LT Arabic 55 Roman'; font-weight: normal;
+	font-size: 16px; margin:0; padding:0px 10px;
+	background:#ce132e; color: #fff; }
+
+
+.editprofile_form {}
+.editprofile_form input { 
+	max-height:40px;
+	background:#fff !important; border:1px solid #cbcbcb !important; }
+
+
+
+/* customer profile booking ------------------- */
+.nwbooking_history-table {
+	overflow: auto;
+	width:100%; float:left; clear:both;
+	padding:0; margin:0; }
+.nwbooking_history-table table {
+	width:100%;  border:none;
+	/*! border:1px solid #cecece; */ }
+.nwbooking_history-table table th,
+.nwbooking_history-table table td { 
+	padding:5px 10px; text-align: left; font-weight:normal;
+	border:none; line-height:1.3em;}
+
+.nwbooking_history-table table th { 
+	font-family: 'Frutiger LT Arabic 55 Roman'; font-weight: normal;
+	color:#ce132e; background: #fff; height: 50px; border:none; }
+.nwbooking_history-table table td { border-bottom:4px solid #fff; color:#888; background:#efefef; }
+
+.nwbooking_history-table a.editbutton { 
+	display: inline-block; padding:5px 12px 5px 5px; border-radius: 5px;
+	color:#fff; background:#444444; text-decoration: none; }
+.nwbooking_history-table a.editbutton img { width:10px; margin:0 6px 0 2px; }
+
+
+.nwbooking_history-table a.canceleditbutton { text-decoration: none; }
+
+
+
+.nwbooking_history-table a.updatebutton { 
+	text-align: center;
+	display:inline-block; padding:5px 10px; border-radius: 5px;
+  background:#ce132d; color:#fff; text-decoration:none; }
+
+.nwbooking_history-table select { margin:0; padding:0; height:34px;}
+.nwbooking_history-table input[type="date"] {
+	margin:0; padding:2px 2px 2px 25px; height:34px; 
+  background-position:8px 7px; }
+
+.nwbooking_history-table-buttons {
+	width:100%; float:left; margin:0 0 20px; padding:0;
+}
+.nwbooking_history-table-buttons a img { width:30px; float:left;}
+.nwbooking_history-table-buttons a span { float:left; margin:8px 0 0 0; text-decoration: underline;}
+.nwbooking_history-table-buttons a { line-height:1em; font-size:14px; margin:10px 0; } 
+.nwbooking_history-table-buttons a.cancelbutton {
+	float:right; font-size:13px; margin:14px 0 10px 20px; 
+	display:inline-block; padding:5px 10px; border-radius: 5px;
+  background:#444444; color:#fff; text-decoration:none;
+	
+}
+@media(max-width:767px){
+	.nwbooking_history-table-buttons a { float:left; clear:both; }
+	.nwbooking_history-table-buttons a.cancelbutton { float:left; margin:0; }
+}
+
+
+
+.dashboardblocks { 
+	width:100%; height:100%; float:left; clear:both; 
+	margin:0; padding:20px; position: relative;
+  background:#e9e9e9; border:1px solid #d7d7d7; cursor: pointer; }
+.dashboardblocks svg { width:50px; float:none; }
+.dashboardblocks svg path { fill:#cd132b; }
+.dashboardblocks:hover { background:#ce132e; }
+
+.dashboardblocks:hover svg path { fill:#fff; }
+
+
+
+.dashboardblocks span { width:100%; float:left; text-align: center; }
+.dashboardblocks h4 {float:left; text-align: left; }
+.dashboardblocks p { float:left; text-align: left; }
+
+.dashboardblocks:hover h4,
+.dashboardblocks:hover p { color:#fff; }
+
+
+
+
+
+
+
+
+
+/* -------------------------------- */
 
 .privacy_page { padding:50px 0; margin:0; }
 .privacy_page p { font-size:1.1em; }
@@ -2151,7 +2346,6 @@ ul.circle_listing li a {}
 @media(max-width:567px){
 	.about_messagebox img.quoteimage { left:15%;}
 }
-
 
 
 /* FAQ CONTET ------- */
